# lickbot

./: Cargo.toml  LICENSE  README.md  TODO.md
.cargo/: faster_builds.toml
.github/workflows/: build.yml  clippy.yml  rust.yml  test.yml
lickbot/: Cargo.toml
lickbot-plugins/: Cargo.toml
lickbot-plugins/src/: entity_target.rs  goals.rs  inventory.rs  lib.rs  mining.rs  mod.rs  nearest_entity.rs  weapon.rs
lickbot-plugins/src/inventory/: mod.rs
lickbot-plugins/src/modules/: auto_eat.rs  auto_look.rs
lickbot-plugins/src/plugins/: auto_eat.rs  auto_look.rs  auto_totem.rs  kill_aura.rs  look_when_mining.rs  mod.rs
lickbot-plugins/src/utils/: goals.rs  mining.rs  mod.rs  nearest_entity.rs  reach_block_pos_goal.rs  temp_reach_block_pos_goal.rs  weapon.rs
lickbot/src/: main.rs  temp_reach_block_pos_goal.rs
plugins/: Cargo.toml
plugins/auto-totem/: Cargo.toml
plugins/auto-totem/src/: lib.rs
plugins/src/modules/: auto_eat.rs  auto_look.rs  auto_totem.rs  kill_aura.rs  mod.rs
plugins/src/utils/: entity_target.rs  mod.rs
