[workspace]
resolver = "2"
members = ["lickbot", "plugins"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-only"
repository = "github.com/x-osc/lickbot"

[workspace.dependencies]
azalea = { git = "https://github.com/x-osc/azalea", version = "*", branch = "dev" }
bevy_ecs = { version = "0.16", default-features = false }
anyhow = "1.0.97"
parking_lot = "0.12.3"
tokio = "1.44.2"
tracing = "0.1.41"
