[workspace]
resolver = "2"
members = ["lickbot", "lickbot-plugins"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "github.com/x-osc/lickbot"

[workspace.dependencies]
azalea = { git = "https://github.com/x-osc/azalea", version = "*", branch = "dev" }
bevy_ecs = { version = "*", default-features = false }
anyhow = "1.0.97"
thiserror = "2.0.12"
parking_lot = "0.12.3"
tokio = "1.44.2"
tracing = "0.1.41"

[profile.dev]
opt-level = 1
[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "thin"
