[package]
name = "lickbot-plugins"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
azalea = { git = "https://github.com/x-osc/azalea", version = "*", branch = "dev" }
thiserror.workspace = true
bevy_ecs.workspace = true
tracing.workspace = true
