[package]
name = "lickbot-plugins"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
azalea.workspace = true
thiserror.workspace = true
tokio.workspace = true
bevy_ecs.workspace = true
tracing.workspace = true

[dev-dependencies]
indexmap = "*"
