[package]
name = "lickbot"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
auto-totem = { version = "0.1.0", path = "../plugins/auto-totem" }
azalea = { git = "https://github.com/x-osc/azalea", version = "0.12.0" }
parking_lot = { version = "0.12.3", features = ["deadlock_detection"] }
tokio = "1.44.2"
tracing = "0.1.41"
