[package]
name = "lickbot"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
lickbot-plugins = { version = "0.1.0", path = "../plugins/" }
parking_lot = { version = "0.12.3", features = ["deadlock_detection"] }
azalea.workspace = true
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
